# DjangoX

./: pyproject.toml
accounts/: admin.py  models.py
accounts/migrations/: 0002_customuser_phone_number.py
config/: settings.py  urls.py
templates/users/: _user.html  user_create.html  user_delete.html  user_detail.html  user_update.html  users_list.html
users/: models.py  urls,py  views.py
users/migrations/: 0001_initial.py
