[tool.poetry]
name = "djangox"
version = "0.1.0"
description = ""
authors = ["yaseen1998 <yasseenkouthe@eng.hu.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
whitenoise = "^5.3.0"
django-debug-toolbar = "^3.2.2"
django-crispy-forms = "^1.13.0"
django-allauth = "^0.46.0"
Django = "^4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
